--- a/web/templates/manual.html
+++ b/web/templates/manual.html
@@ -106,6 +106,30 @@
         </section>
 
         <section class="card">
+            <h2>자동 매매 작동 프로세스 (How it Works)</h2>
+            <p>시스템이 어떻게 종목을 찾고 매매하는지 구체적인 예시로 설명합니다.</p>
+
+            <h3>작동 시나리오 예시 (삼성전자)</h3>
+            <ol>
+                <li><strong>1. 종목 포착 (Scanning)</strong>: <br>
+                    스캐너가 시장 전체를 분석하여 거래량이 급증하거나 상위권에 랭크된 '삼성전자'를 발견하고 <strong>감시 리스트(Universe)</strong>에 등록합니다.
+                </li>
+                <li><strong>2. 실시간 감시 (Monitoring)</strong>: <br>
+                    'MarketData' 엔진이 승인된 감시 종목들의 가격을 실시간으로 추적합니다. <br>
+                    <em>로그 예시: <code>[감시 종목 업데이트] 총 5개: 005930(삼성전자), ...</code></em>
+                </li>
+                <li><strong>3. 관심 종목 등극 (Interest)</strong>: <br>
+                    '삼성전자'의 일봉 차트가 20일 이동평균선 위에 위치하여 상승 추세임이 확인되면 <strong>관심 종목</strong> 상태가 됩니다.
+                    <br><em>로그 예시: <code>[관심 종목 포착] 005930 | 사유: 일봉 상승 추세 진입</code></em>
+                </li>
+                <li><strong>4. 매수 진입 (Buy Signal)</strong>: <br>
+                    5분봉 차트에서 5일선이 20일선을 뚫고 올라가는 <strong>골든크로스</strong>가 발생하고 거래량이 충분하면 즉시 매수합니다.
+                    <br><em>로그 예시: <code>[삼성전자] 매수 진입 (골든크로스 + 거래량 충족) ...</code></em>
+                </li>
+            </ol>
+        </section>
+
+        <section class="card">
             <h2>차트 탭 사용 가이드 (Chart Tab)</h2>
             <p>실시간 시세 차트와 매매 내역을 시각적으로 확인하고 분석할 수 있는 공간입니다.</p>
 
