--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -219,6 +219,11 @@
                                 <label class="group-label">수동 종목 지정 (콤마 구분)</label>
                                 <textarea id="universe-input" rows="3" placeholder="예: 005930, 000660"></textarea>
                             </div>
+                            <div class="option-group">
+                                <label class="group-label">알림 설정</label>
+                                <label><input type="checkbox" id="enable_trade_alert"> 매매 알림 (Telegram)</label>
+                                <label><input type="checkbox" id="enable_system_alert"> 시스템 알림 (Telegram)</label>
+                            </div>
                         </div>
                     </section>
 
