--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -42,6 +42,7 @@
             <button class="tab-btn active" data-tab="tab-portfolio">포트폴리오</button>
             <button class="tab-btn" data-tab="tab-chart">차트</button>
             <button class="tab-btn" data-tab="tab-backtest">백테스트</button>
+            <button class="tab-btn" data-tab="tab-journal">매매일지</button>
             <button class="tab-btn" data-tab="tab-settings">환경 설정</button>
             <button class="tab-btn" data-tab="tab-logs">시스템 로그</button>
         </nav>
@@ -176,6 +177,10 @@
 
             <!-- Tab 3: Backtest -->
             {% include 'backtest.html' %}
+
+            <!-- Tab: Journal -->
+            {% include 'journal.html' %}
+
 
             <!-- Tab 4: Settings -->
             <div id="tab-settings" class="tab-content">
